Fixing static executable problems stemming from CIShell revision 1191 (January 11 2001).  Specifically, since the GUESS static executable substitutes its arguments into (on Windows) a batch file or (on *nix) a shell script, the presence of whitespace or special/shell characters was not working cross-platform.  In this revision we simplify the string substitution performed at the StaticExecutableRunner level, attempt to clean the string of troublesome characters like ">" and "&", and apply platform-appropriate argument quotation in the mentioned GUESS batch files and shell scripts.
Renaming unrelated variables to conform to our CheckStyle.

Reviewed by Micah.